# GARF

./: .gitignore  README.md  app.py  eval.py  git_push.bat  index.html  nuscenes_visualizer.ipynb  pyproject.toml  train.py
assembly/backbones/pointnet2/: pointnet2_dynamic_utils.py  pointnet2_msg.py  pointnet2_utils.py
assembly/backbones/pointtransformerv3/: model.py
assembly/data/: transform.py  utils.py
assembly/data/breaking_bad/: __init__.py  base.py  module.py  uniform.py  weighted.py
assembly/data/inference/: __init__.py  mesh.py
assembly/data/nuscenes/: __init__.py  base.py
assembly/models/: utils.py
assembly/models/denoiser/: __init__.py  denoiser_base.py  denoiser_diffusion.py  denoiser_flow_matching.py
assembly/models/pretraining/: __init__.py  frac_seg.py  loss.py
configs/: app.yaml  eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: breaking_bad.yaml
configs/experiment/: denoiser_diffusion.yaml  denoiser_flow_matching.yaml  finetune.yaml  pretraining_frac_seg.yaml
configs/hydra/: default.yaml
configs/loggers/: csv.yaml  wandb.yaml
configs/model/: denoiser_diffusion.yaml  denoiser_flow_matching.yaml  frac_seg.yaml
configs/model/encoder/: pnv2.yaml  ptv3.yaml  ptv3_large.yaml
configs/trainer/: default.yaml
gallery/: gallery.json
gallery/FantasticBreaks/01047/: model_b_0.ply  model_r_0.ply
gallery/FantasticBreaks/17001/: model_b_0.ply  model_r_0.ply
gallery/FantasticBreaks/19002/: model_b_0.ply  (+1 more)
scripts/: eval.sh  train.sh
static/css/: bulma.min.css  index.css
static/js/: index.js  visualization.js
(+25 files in other folders)
