[project]
name = "garf"
version = "0.1.0"
authors = ["JDScript"]
description = "GARF"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.21.0",
    "h5py>=3.13.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.0.post0",
    "setuptools>=76.0.0",
    "scipy>=1.15.2",
    "torch==2.5.1",
    "torch-geometric>=2.6.1",
    "torchvision>=0.20.1",
    "trimesh>=4.6.4",
    "diffusers[torch]>=0.32.2",
    "torch-scatter==2.1.2+pt25cu124",
    "peft>=0.14.0",
    "addict>=2.4.0",
    "spconv-cu120>=2.3.6",
    "timm>=1.0.15",
]

[project.optional-dependencies]
post = ["flash-attn", "pytorch3d", "torch-scatter"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
no-build-isolation-package = ["flash-attn", "pytorch3d", "torch-scatter"]
find-links = ["https://data.pyg.org/whl/torch-2.5.0+cu124.html"]

[tool.uv.sources]
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d", tag = "V0.7.8" }

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "einops"]

[[tool.uv.dependency-metadata]]
name = "pytorch3d"
version = "0.7.8"
requires-dist = ["torch", "setuptools"]

[[tool.uv.dependency-metadata]]
name = "torch-scatter"
url = "2.1.2+pt25cu124"
requires-dist = ["torch", "setuptools"]
